# biodata-registry

./: .gitignore  CLAUDE.md  README.md  REGISTRY_TODO_PLANS.md  TODO.md  biodata_registry-0.1.0-py3-none-any.whl  biodata_registry-0.1.1-py3-none-any.whl  biodata_registry-0.1.2-py3-none-any.whl  biodata_registry-0.1.3-py3-none-any.whl  biodata_registry-0.1.4-py3-none-any.whl  biodata_registry-0.1.5-py3-none-any.whl  biodata_registry-0.1.6-py3-none-any.whl  memory.md  pyproject.toml
biodata_registry/: __init__.py  integration.py  manifest_schema.py  registry.py  server.py
biodata_registry/manifests/: cptac_pda.yaml  gse15471_badea.yaml  gse155698_steele.yaml  gse16515_mayo.yaml  gse17891_collisson.yaml  gse205013_werba.yaml  gse205154_sears.yaml  gse205154_sears_counts.yaml  gse205154_sears_tmm.yaml  gse21501_stratford.yaml  gse28735_pdac.yaml  gse50827_nones.yaml  gse57495.yaml  gse62165_jiang.yaml  gse71729_moffitt.yaml  gse71989_chen.yaml  paca_au_array.yaml  paca_au_rnaseq.yaml  paca_ca_rnaseq.yaml  puleo_2018.yaml  tcga_paad.yaml
docs/adr/: ADR-0001-decision-matrix.md
scripts/: release.sh
scripts/ingest/loveless/: Dockerfile  README.md  assemble_h5ad.py  convert_rds_to_h5ad.R  derive_signatures.py  run_job.sh  subset_h5ad.py
tests/: test_integration_plan.py  test_manifests_against_data.py  test_registry.py
