[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biodata-registry"
version = "0.1.0"
description = "Dataset manifest registry for bioinformatics agents"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastmcp>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["biodata_registry*"]

[tool.setuptools.package-data]
biodata_registry = ["manifests/*.yaml"]
