[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biodata-registry"
version = "0.1.7"
description = "Dataset manifest registry for bioinformatics agents"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
server = ["fastmcp>=0.1.0"]
# Live-data tests (opt-in, RUN_LIVE_DATA_TESTS=1) read the hosted h5ads.
test = ["pytest>=7.0", "anndata>=0.9", "numpy>=1.23"]

[tool.pytest.ini_options]
markers = [
    "live: downloads hosted h5ads and validates manifests against real data (opt-in via RUN_LIVE_DATA_TESTS=1)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["biodata_registry*"]

[tool.setuptools.package-data]
biodata_registry = ["manifests/*.yaml"]
